# awesome

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev.slim.txt  requirements.dev.txt  requirements.slim.txt  requirements.txt
awesome/agent/: agent.py  base_agent_checkpoint.py  torch_agent.py  torch_agent_checkpoint.py
awesome/analytics/: noisy_unaries_result_model.py  result_comparison.py  result_model.py
awesome/dataset/: __init__.py  awesome_dataset.py  base_dataset.py  batched_dataset.py  convexity_segmentation_dataset.py  data_sample.py  label_mode.py  (+9 more)
data/: readme.md
docs/: getting_started.md  reproduction_guide.md
notebooks/: a_first_illustration.ipynb  batched_multi_object_prior.ipynb  build_configs.ipynb  data_copy.ipynb  evaluation.ipynb  fbms.ipynb  fbms_eval.ipynb  fbms_eval_icml.ipynb  fbms_eval_prior.ipynb  fbms_into_plots.ipynb  fbms_spatio_temporal_noisy_eval.ipynb  fbms_spatio_temporal_plots.ipynb  fbms_test.ipynb  imageRepresentationTest.ipynb  matlab_convexity_dots.ipynb  plots_intro.ipynb  process_config_paths.ipynb  recompute_miou.ipynb  refit_unet_baseline.ipynb  refit_unet_xy.ipynb  run.ipynb  run_fbms_unet.ipynb  run_fbms_unet_joint.ipynb  run_fbms_unet_joint_grad.ipynb  run_fbms_unet_prior_only.ipynb  run_fbms_unet_prior_only_new_realnvp.ipynb  run_fbms_unet_prior_only_realnvp_noisy.ipynb  spatio_temporal.ipynb  unireps_evaluation.ipynb  unireps_qualitative_results.ipynb  weight_decay_test_run_fbms_unet.ipynb
runs/: readme.md
scripts/: run.py  run_grid_search.py  run_multi_config.py  setup.py
(+390 files in other folders)
